--- a/src/App.scss
+++ b/src/App.scss
@@ -149,10 +149,10 @@ a {
 .images-collection-container {
 	width: 100%;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: 30vw;
 	list-style: none;
-	grid-gap: 10px;
+	grid-gap: 25px;
 	margin-top: 20px;
 
 	figure,
@@ -170,5 +170,17 @@ a {
 		position: relative;
 		overflow: hidden;
 		margin: 0;
+
+		&.short {
+			grid-row: span 1;
+		}
+
+		&.tall {
+			grid-row: span 2;
+		}
+	}
+
+	@media screen and (max-width: 960px) {
+		grid-template-columns: 1fr;
 	}
 }
