--- a/src/App.scss
+++ b/src/App.scss
@@ -184,3 +184,19 @@ a {
 		grid-template-columns: 1fr;
 	}
 }
+
+// Information Section
+
+.information-section {
+	margin: 2em 0;
+	p {
+		font-family: Verdana, Geneva, Tahoma, sans-serif;
+		line-height: 2;
+	}
+
+	span {
+		font-weight: bold;
+		font-size: large;
+		line-height: 1.5;
+	}
+}
