Sort out env importation

--- a/src/App.scss
+++ b/src/App.scss
@@ -106,7 +106,8 @@ a {
 }
 
 .menu-container {
-	display: flex;
+	/* display: flex; */
+	display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -122,6 +123,7 @@ a {
 	transform: translateX(-360deg);
 
 	&.expanded {
+		display: block;
 		opacity: 1;
 		transform: translateX(0);
 	}
@@ -198,5 +200,29 @@ a {
 		font-weight: bold;
 		font-size: large;
 		line-height: 1.5;
+	}
+}
+
+// Contact Form
+
+.contact-form-section-container {
+	h1,
+	span {
+		font-family: "Courier New", Courier, monospace;
+	}
+
+	span {
+		font-weight: 700;
+	}
+
+	.email-input {
+		width: 400px;
+		margin: 1.25rem 0;
+		border-bottom: 2px solid #161412;
+
+		input {
+			width: 100%;
+			border: none;
+		}
 	}
 }
